# dissonance

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  manage.py  podman-kube.yaml  pyproject.toml  requirements-ci.txt  requirements.txt
config/: asgi.py  settings.py  urls.py  wsgi.py
dissonance/: events.py
dissonance/chatrooms/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
dissonance/chatrooms/migrations/: 0001_initial.py
templates/: base.html
templates/chatrooms/: _message.html  _message_form.html  _messages.html  _room_form.html  index.html  room_detail.html  room_form.html
templates/registration/: login.html
