[tool.poetry]
name = "dissonance"
version = "0.1.0"
description = "Simple chat demo app"
authors = ["Dan Jacob <danjac2018@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.1"
django-environ = "^0.10.0"
psycopg = {extras = ["binary"], version = "^3.1.9"}
heroicons = "^2.2.0"
uvicorn = "^0.22.0"
daphne = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportOptionalMemberAccess = false
reportGeneralTypeIssues = false
reportMissingTypeStubs = false


